# auto-aim

./: CMakeLists.txt  readme.txt
AutoShot/include/: Armour.h  ArmourFinder.h  Combat2024_AllTeam.h  EasyFind.h  FightMode.h  Filtering.h  KalmanFilter.h  Marker.h  PnpSolver.h  SentryTrajectorySolving.h  Svm.h  TargetDecision.h  TrajectorySolving.h  gimbal_control.cpp  gimbal_control.h
AutoShot/src/: Armour.cpp  ArmourFinder.cpp  Combat2024_AllTeam.cpp  EasyFind.cpp  FightMode.cpp  Filtering.cpp  KalmanFilter.cpp  Marker.cpp  PnpSolver.cpp  SentryTrajectorySolving.cpp  Svm.cpp  TargetDecision.cpp  TrajectorySolving.cpp  main.cpp
Military_Module/drone/include/: DRONETHREADS.h
Military_Module/engineer/include/: ENGINEERTHREADS.h
Military_Module/hero/include/: HEROTHREADS.h
Military_Module/infantry/include/: Energy.h  INFANTRYTHREADS.h
Military_Module/infantry/src/: Energy.cpp
Military_Module/sentry/include/: SENTRYTHREADS.h
combat2025/: readme.txt
others/include/: Calibrator.h  CameraApi.h  CameraDefine.h  CameraStatus.h  MindVisionCamera.h  SerialPort.h
others/picture/Calibration/: 1.jpg_  10.jpg_  11.jpg_  12.jpg_  13.jpg_  14.jpg_  15.jpg_  16.jpg_  17.jpg_  18.jpg_  19.jpg_  2.jpg_  20.jpg_  21.jpg_  22.jpg_  23.jpg_  24.jpg_  25.jpg_  3.jpg_  4.jpg_  5.jpg_  6.jpg_  7.jpg_  8.jpg_  9.jpg_
others/src/: Calibrator.cpp  MindVisionCamera.cpp  SerialPort.cpp
tools/: cr  ip  readme.md
tools/include/: AngleSolver.hpp  MathTool.h  Matrix.h  Setter.h  TimerBase.h  pid.h
tools/parameters_lists/: para.yaml
tools/src/: MathTool.cpp  Setter.cpp  TimerBase.cpp  pid.cpp
